# promptdeploy

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/promptdeploy/: alembic.ini  main.py  test.db
backend/promptdeploy/alembic/versions/: 360d5aa752ee_create_initial_tables.py
backend/promptdeploy/api/: auth.py  utils.py
backend/promptdeploy/api/v1/: api.py
backend/promptdeploy/api/v1/endpoints/: api_keys.py  deployed_prompts.py  endpoints.py  prompt_templates.py  prompts.py
backend/promptdeploy/crud/: api_keys.py  endpoints.py  prompt_templates.py  prompts.py  users.py
backend/promptdeploy/database/: database.py  models.py
backend/promptdeploy/schemas/: schemas.py
backend/promptdeploy/scripts/: create_tables.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  AuthContext.tsx  Routes.tsx  actions.ts  index.css  types.ts
frontend/src/components/: ApiKeyCreateForm.tsx  ApiKeyCreateModal.tsx  ApiKeysTable.tsx  Header.tsx  PrivateRoute.tsx  PromptAddForm.tsx  PromptAddModal.tsx  PromptCard.tsx  PromptGrid.tsx  PromptTemplateEdit.tsx
frontend/src/css/: HomePage.css  PromptEditPage.css
frontend/src/pages/: HomePage.tsx  LoginPage.tsx  PromptEditPage.tsx
