[tool.poetry]
name = "promptdeploy"
version = "0.1.0"
description = "Manage and deploy your prompts easily"
authors = ["Gerard Cardoso <gerard@nplan.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.2"
sqlalchemy = "^2.0.27"
uvicorn = "^0.27.1"
werkzeug = "^3.0.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
